# ngrc_torch

./: LICENSE  README.md  pyproject.toml  requirements.txt
archive/: DP(solve_ivp).py  DP_to_csv.py  bz_ngrc.ipynb  dp_preprocessing.ipynb  num.py  template.ipynb
scripts/: lorenz_ngrc_standalone.py  run_ngrc_optuna.py
src/ngrc_torch/: config.py  model.py
src/ngrc_torch/data/: lorenz.py
src/ngrc_torch/utils/: metrics.py  plotting.py
