[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngrc_torch"
version = "0.1.0"
description = "An NGRC implementation using torch"

dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "optuna",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
